# vector

./: .config.mk  .dockerignore  .gitignore  .releaserc.js  Cargo.toml  Jenkinsfile  LICENSE-3rdparty.csv  MEZMO_CHANGELOG.md  Makefile  build.rs  commitlint.config.js  deny.toml  license-tool.toml  package-lock.json  package.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/actions/setup/: action.yml
.github/actions/spelling/: expect.txt  patterns.txt
.github/workflows/: integration-test-mezmo.yml  integration-test.yml.upstream  integration.yml.upstream  publish.yml.upstream  test.yml.upstream
benches/: remap.rs
benches/transform/: route.rs
deployment/kubernetes/: mtp-vector-gen0.yaml.envsubst  mtp-vector.yaml.envsubst
distribution/docker/mezmo/: Dockerfile  opentelemetry-proto.desc
docs/: DEVELOPING.md  MEZMO_DEVELOPMENTS.md
jeprof/: README.md  report.sh
lib/codecs/: Cargo.toml
lib/codecs/src/: lib.rs
lib/codecs/src/decoding/: mod.rs
lib/codecs/src/decoding/format/: gelf.rs  mod.rs  vrl.rs
lib/codecs/src/decoding/format/mezmo/: mod.rs  prom_remote_write.rs
lib/codecs/src/decoding/format/mezmo/open_telemetry/: log_parser.rs  metric_parser.rs  mod.rs  trace_parser.rs
lib/codecs/src/decoding/format/mezmo/prometheus_remote_write/: metric_sample_types.rs  mod.rs  parser.rs
lib/codecs/src/encoding/chunking/: gelf.rs
lib/enrichment/: Cargo.toml
lib/enrichment/src/: lib.rs
lib/fakedata/: Cargo.toml
lib/fakedata/src/: lib.rs  logs.rs
lib/fakedata/src/mezmo/: access_log.rs  error_log.rs  financial.rs  infrastructure.rs  kubernetes.rs  metrics.rs  mod.rs  sensor.rs  syslog.rs
lib/mezmo/: Cargo.toml
lib/mezmo/src/: callsite.rs  context.rs  lib.rs  macros.rs  pipeline_state_variable_change_action.rs  user_trace.rs
lib/mezmo/src/functions/: get_pipeline_state_variable.rs  mock_user_log.rs  mod.rs  set_pipeline_state_variable.rs  test_util.rs  user_log.rs
lib/opentelemetry-proto/: Cargo.toml  build.rs
lib/prometheus-parser/: Cargo.toml
lib/prometheus-parser/src/: lib.rs
lib/tracing-limit/src/: lib.rs
lib/vector-api-client/: Cargo.toml
lib/vector-api-client/graphql/: schema.json
lib/vector-buffers/: Cargo.toml
lib/vector-buffers/src/: lib.rs
lib/vector-common/: Cargo.toml
lib/vector-common/src/: lib.rs  shutdown.rs
lib/vector-config/: Cargo.toml
lib/vector-config-common/src/: lib.rs
lib/vector-config-macros/src/: lib.rs
lib/vector-config/src/: lib.rs
lib/vector-core/: Cargo.toml
lib/vector-core/src/: fanout.rs  lib.rs  sink.rs
lib/vector-lib/src/: lib.rs
lib/vector-lookup/: Cargo.toml
lib/vector-tap/src/: controller.rs  lib.rs
lib/vector-vrl/cli/: Cargo.toml
lib/vector-vrl/functions/: Cargo.toml
lib/vector-vrl/tests/: Cargo.toml
lib/vector-vrl/tests/src/: main.rs
lib/vector-vrl/web-playground/: Cargo.toml
lib/vrl/stdlib/: Cargo.toml
lib/vrl/web-playground/: Cargo.toml
scripts/environment/: Dockerfile  entrypoint.sh
scripts/integration/: Dockerfile  docker-compose.amqp.yml  docker-compose.aws.yml  docker-compose.elasticsearch.yml  docker-compose.fluent.yml  docker-compose.gcp.yml  docker-compose.kafka.yml  docker-compose.logstash.yml  docker-compose.postgres.yml  docker-compose.splunk.yml
scripts/integration/amqp/: compose.yaml
scripts/integration/azure/: test.yaml
scripts/integration/elasticsearch/: test.yaml
scripts/integration/mezmo-aggregate-distributed/: test.yaml
scripts/integration/mezmo-throttle-distributed/: compose.yaml  test.yaml
scripts/integration/opentelemetry-sink/: compose.yaml  test.yaml
scripts/integration/pgbouncer/: compose.yaml  test.yaml
scripts/integration/postgres/: test.yaml
scripts/integration/pulsar/: compose.yaml
scripts/integration/sumo-logic/: test.yaml
src/: app.rs  cli.rs  gcp.rs  http.rs  lib.rs  template.rs  trace.rs  validate.rs
src/api/: handler.rs  server.rs  tap.rs  tests.rs
src/aws/: auth.rs
src/codecs/encoding/: transformer.rs
src/common/http/: server_auth.rs
src/conditions/: datadog_search.rs  mod.rs  vrl.rs
src/config/: builder.rs  cmd.rs  compiler.rs  graph.rs  mod.rs  sink.rs  source.rs  transform.rs  watcher.rs
src/config/loading/: mod.rs
src/config/unit_test/: mod.rs
src/enrichment_tables/: mod.rs  state_variables.rs
src/internal_events/: aws_sqs.rs  exec.rs  http_client_source.rs  mezmo_aggregate.rs  mezmo_aggregate_distributed.rs  mezmo_config.rs  mezmo_datadog_agent_parser.rs  mezmo_generate_config_error.rs  mezmo_log_clustering.rs  mezmo_log_to_trace.rs  mezmo_persistence.rs  mezmo_tag_cardinality_limit.rs  mezmo_throttle_distributed.rs  mod.rs  remap.rs
src/internal_telemetry/allocations/: mod.rs
src/mezmo/: macros.rs  mod.rs  user_trace.rs
src/mezmo/config/: mod.rs  service.rs
src/mezmo/event_trace/: mod.rs
src/mezmo/persistence/: mod.rs  rocksdb.rs
src/mezmo/remote_task_execution/: mod.rs
src/mezmo/vrl/: mod.rs  (+2 more)
src/providers/: http.rs  mod.rs
src/secrets/: exec.rs
src/sinks/: azure_monitor_logs.rs  datadog_archives.rs  honeycomb.rs  http.rs  logdna.rs  mezmo.rs  mod.rs  prelude.rs  pulsar.rs  redis.rs
src/sources/: amqp.rs  demo_logs.rs  file.rs  gcp_pubsub.rs  heroku_logs.rs  http_server.rs  journald.rs  kafka.rs  logstash.rs  mezmo_demo_logs.rs  mod.rs  nats.rs  pulsar.rs  static_metrics.rs  syslog.rs
src/tap/: cmd.rs  mod.rs
src/test_util/: mod.rs
src/top/: metrics.rs
src/topology/: builder.rs  controller.rs  mod.rs  running.rs
src/transforms/: aggregate.rs  aws_ec2_metadata.rs  dedupe.rs  filter.rs  log_to_metric.rs  metric_to_log.rs  mezmo_aggregate.rs  mezmo_aggregate_v2.rs  mezmo_log_classification.rs  mezmo_log_to_metric.rs  mod.rs  protobuf_to_log.rs  protobuf_to_metric.rs  remap.rs  route.rs  sample.rs  sliding_aggregate.rs  throttle.rs  trace_head_sample.rs  trace_tail_sample.rs
test/data/: control.yaml  cron.yaml  dragonfly.yaml  pipeline-env-config.yaml  render-tool-mtp.json  resources.yaml  vector-partitions.yaml  vector.yaml
tests/: api.rs
tests/integration/: cli.rs  shutdown.rs
vdev/src/: main.rs
website/: config.toml  package-lock.json
(+310 files in other folders)
