[package]
name = "codecs"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[[bin]]
name = "generate-avro-fixtures"
path = "tests/bin/generate-avro-fixtures.rs"

[dependencies]
apache-avro = { version = "0.16.0", default-features = false }
bytes = { version = "1", default-features = false }
chrono.workspace = true
csv-core = { version = "0.1.10", default-features = false }
derivative = { version = "2", default-features = false }
dyn-clone = { version = "1", default-features = false }
faster-hex = "0.8"
lookup = { package = "vector-lookup", path = "../vector-lookup", default-features = false, features = ["test"] }
memchr = { version = "2", default-features = false }
once_cell = { version = "1.19", default-features = false }
ordered-float = { version = "4.2.0", default-features = false }
prometheus-remote-write = { version = "1.1.3", tag =  "v1.1.4", git = "https://github.com/mezmo/prometheus-remote-write-rs.git" }
prost = { version = "0.12.3", default-features = false, features = ["std"] }
prost-reflect = { version = "0.13", default-features = false, features = ["serde"] }
regex = { version = "1.10.3", default-features = false, features = ["std", "perf"] }
serde.workspace = true
serde_json.workspace = true
smallvec = { version = "1", default-features = false, features = ["union"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
snap = "1"
syslog_loose = { version = "0.21", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = { version = "0.1", default-features = false }
vrl.workspace = true
vector-common = { path = "../vector-common", default-features = false }
vector-config = { path = "../vector-config", default-features = false }
vector-config-common = { path = "../vector-config-common", default-features = false }
vector-config-macros = { path = "../vector-config-macros", default-features = false }
vector-core = { path = "../vector-core", default-features = false, features = ["vrl"] }
mezmo = { path = "../mezmo", default-features = false }
opentelemetry-rs = { version = "1.2.1", tag = "v1.2.4" , git = "https://github.com/mezmo/opentelemetry-rs.git" }
rand = "0.8.5"

[dev-dependencies]
futures = { version = "0.3", default-features = false }
indoc = { version = "2", default-features = false }
tokio = { version = "1", features = ["test-util"] }
quick-protobuf = "0.8"
similar-asserts = "1.5.0"
vector-core = { path = "../vector-core", default-features = false, features = ["vrl", "test"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
rstest = "0.18.2"
vrl.workspace = true

[features]
syslog = ["dep:syslog_loose"]
