[package]
name = "fakedata"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
chrono = "0.4.19"
fakedata_generator = "0.2.4"
rand = "0.8.5"

rand_distr = "0.4.3"
lazy_static = "1"
regex = "1"
num = "0.4"
faker_rand = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["v4", "v3"] }
histogram = "0.7"
ilog = "1.0.1"
