[package]
name = "mezmo"
version = "0.1.0"
authors = ["Mezmo, Inc. <help@mezmo.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
vrl.workspace = true
serde.workspace = true
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
enrichment = { path = "../enrichment" }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
vector-config = { path = "../vector-config", default-features = false }
vector-core = { path = "../vector-core", default-features = false, features = ["vrl"]}
tokio = { version = "1.36.0", default-features = false, features = ["macros", "time"] }
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["net", "sync", "time"] }
tracing = { version = "0.1.34", default-features = false, features = ["log"]}
moka = { version = "0.11" }

[dev-dependencies]
tokio-test = "0.4.3"
serial_test = "1.0.0"
