[package]
name = "vector-vrl-functions"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
lookup = { package = "lookup", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.2.0.6" }
vrl = { package = "vrl", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.2.0.6" }
value = { package = "value", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.2.0.6", default-features = false, features = [] }
