[package]
name = "vector-vrl-tests"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
enrichment = { path = "../../enrichment" }
lookup = { package = "lookup", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.3.2" }
stdlib = { package = "vrl-stdlib", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.3.2" }
vrl = { package = "vrl", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.3.2" }
value = { package = "value", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.3.2" }
vrl-tests = { package = "vrl-tests", git = "ssh://git@github.com/answerbook/vrl.git", rev = "v0.3.2" }
vector-vrl-functions = { path = "../../vector-vrl/functions" }

ansi_term = "0.12"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.1.14", features = ["derive"] }
glob = "0.3"
prettydiff = "0.6"
regex = "1"
serde = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.0" }

[features]
default = []
